# k2tree

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  b128.h  bbm.c  codemeta.json  k2.h  k2aux.c  k2ops.c  k2pagerank.c  k2sparse.c  k2text.c  makefile  matrixcmp.c  minimats.c  prodtest.sh  sumtest.sh  t8.txt
.github/workflows/: c.yml
tests/: test_consistency.ps1  test_consistency.sh  test_sum.sh  unit_tests.c
